# op-sqlite

./: .clang-format  .gitignore  .gitmodules  .oxlintrc.json  .yarnrc.yml  404.html  AGENTS.md  CONTRIBUTING.md  Gemfile  README.md  TODO.md  WINDOWS_IMPLEMENTATION.md  babel.config.js  gen-sqlcipher.sh  generate-amalgamation.sh  generate_tokenizers_header_file.rb  index.html  lefthook.yml  op-sqlcipher.podspec  op-sqlite.podspec  package-lock.json  package.json  react-native.config.js  sitemap.xml  test_transaction.js  tsconfig.json  turbo.json
.github/: ISSUE_TEMPLATE.yml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  BUG.yml  REQUEST.yml  bug_report.md
.github/workflows/: ci.yml  publish.yml  release.yml  windows.yml
.yarn/patches/: @react-native-community-cli-platform-android-npm-13.6.0-036e406a84.patch  react-native-npm-0.74.0-rc.0-2c4c590476.patch
.zed/: settings.json
android/: .project  CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/op/sqlite/: OPSQLiteBridge.java  OPSQLiteBridge.kt  OPSQLiteModule.java  OPSQLiteModule.kt  OPSQLitePackage.java  OPSQLitePackage.kt
android/src/main/java/com/reactnativequicksqlite/: OPSQLiteBridge.java  OPSQLiteModule.java  OPSQlitePackage.java
android/src/paper/java/com/op/sqlite/: NativeOPSQLiteSpec.java
assets/css/: styles.15cbc4ab.css  styles.66eae5c3.css  styles.97e14b9a.css  styles.b8d2aa6b.css
assets/js/: 0058b4c6.da562644.js  01a85c17.79d34574.js  04b41639.a489643f.js  0964e1c5.ef402d81.js  0e384e19.218a5df9.js  0e384e19.26f165d6.js  0f121f2b.b2dc469f.js  13ddbe6a.72b1b799.js  13ddbe6a.84fc5b49.js  13ddbe6a.8db03caf.js  13ddbe6a.bf878227.js  13ddbe6a.d82e9348.js  14eb3368.3e778390.js  17896441.59e8741a.js  17896441.851a2c26.js  17896441.cace9c9d.js  18c41134.52c68712.js  18c41134.74dfffa3.js  1dea6ca3.61ece3c4.js  1df93b7f.143930e5.js  1df93b7f.2a970ec7.js  1df93b7f.396d99c2.js  1df93b7f.70bce0ab.js  1df93b7f.bd40fc2b.js  1e4232ab.98d9e584.js  1e4232ab.ae7286fd.js  1f391b9e.420ef117.js  1f391b9e.c6f09c04.js  1f391b9e.e501dd3f.js  237.ad4f0623.js  285.3aa31713.js  28554658.1170240c.js  28554658.330d11f6.js  28554658.781c04eb.js  28554658.e373e762.js  2bccb399.0826e321.js  2bccb399.36aad286.js  2bccb399.9266314f.js  2fe8b70e.638c9d6d.js  3042.41ea5725.js  (+192 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/authors/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/welcome/: index.html
c_sources/: tokenizers.cpp  tokenizers.h
cpp/: DB.cpp  DB.hpp  DBHostObject.cpp  DBHostObject.h  DbHostObject.cpp  DbHostObject.h  DumbHostObject.cpp  DumbHostObject.h  DynamicHostObject.cpp  DynamicHostObject.h  OPBridge.cpp  OPBridge.hpp  OPDB.cpp  OPDB.hpp  OPSqlite.cpp  OPSqlite.hpp  OPThreadPool.cpp  OPThreadPool.h  OpenSqliteHo.cpp  OpenSqliteHo.h  PreparedStatementHostObject.cpp  PreparedStatementHostObject.h  SmartHostObject.cpp  SmartHostObject.h  ThreadPool.cpp  ThreadPool.h  bindings.cpp  bindings.h  bridge.cpp  bridge.h  logs.h  macros.h  macros.hpp  sqlbatchexecutor.cpp  sqlbatchexecutor.h  sqlite3.h  turso_bridge.cpp  types.h  types.hpp  utils.cpp  (+2 more)
cpp/libsql/: LICENSE.txt  OPBridge.cpp  bridge.cpp  bridge.h  bridge.hpp  libsql.h
cpp/sqlcipher/: LICENSE.txt  sqlite3.h
cpp/validators/: DbAttachValidator.cpp  DbAttachValidator.h  DbCloseValidator.cpp  DbCloseValidator.h  DbDetachValidator.cpp  DbDetachValidator.h  DbOpenValidator.cpp  DbOpenValidator.h
docs/: docusaurus.config.ts  package-lock.json  package.json
docs/ORM_Libs/: index.html
docs/api/: index.html
docs/configuration/: index.html
docs/cpp_usage/: index.html
docs/debugging/: index.html
docs/docs/: ORM_Libs.md  api.md  configuration.md  cpp_usage.md  debugging.md  gotchas.md  installation.md  key_value_storage.md  libsql.md  reactive_queries.md  tokenizers.md  windows.md
docs/gotchas/: index.html
docs/installation/: index.html
docs/intro/: index.html
docs/key_value_storage/: index.html
docs/libsql/: index.html
docs/reactive_queries/: index.html
docs/tokenizers/: index.html
example/: .gitignore  .tool-versions  Gemfile  app.json  babel.config.js  index.js  index.web.tsx  metro.config.js  package-lock.json  package.json  react-native.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
example/android/: build.gradle  gradle.properties  link-assets-manifest.json  settings.gradle
example/c_sources/: custom_tokenizer.c  custom_tokenizer.h  tokenizers.cpp  tokenizers.h
example/ios/: AppDelegate.swift  Podfile
example/patches/: react-native+0.74.0-rc.5.patch  typeorm+0.3.11.patch
example/src/: App.js  App.tsx  AppWeb.tsx  Database.js  Database.ts  UpdateHook.tsx  performance_test.ts  server.ts
example/web/: index.html  index.web.tsx
example/web-build/: index.html
example/windows/: OpSqliteExample.sln
ios/: OPSQLite.h  OPSQLite.mm
markdown-page/: index.html
node/: .gitignore  README.md  jest.config.js  package.json  tsconfig.json
opsqlite-expo-sample/: app.json  package.json  react-native.config.js  tsconfig.json
patches/: react-native+0.74.0-rc.5.patch
scripts/: build-libsql.sh  build-sqlite-vec-ios.sh  build-sqlite-vec.sh  build-turso-binaries.sh  build-windows.ps1  bump-version.sh  download-latest-sqlite-amalgamation.sh  download-sqlite-vec-android.sh  gen-sqlcipher.sh  poll-in-app-server.js  release.sh  test-android.sh  test-ios.sh  test-windows.sh  turnOffEverything.js  turnOnIOSEmbedded.js  turnOnLibsql.js  turnOnSQLCipher.js  turnOnTurso.js  update-sqlitevec.sh
src/: NativeOPSQLite.js  NativeOPSQLite.ts  Storage.ts  Storage.web.ts  functions.ts  functions.web.ts  index.js  index.ts  index.web.ts  sqlite-wasm-optional.d.ts  types.d.ts  types.ts
windows/: .gitignore  OPSQLite.sln  OpSqlite.sln  README.md
windows/OPSQLite/: CMakeLists.txt  OPSQLite.def  OPSQLite.vcxproj  OPSQLiteModule.cpp  OPSQLiteModule.h  PropertySheet.props  ReactPackageProvider.cpp  ReactPackageProvider.h  packages.config  pch.h
(+148 files in other folders)
